cleanup some of the sonar warning which came up after migration